fixed contact overflow

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -182,7 +182,8 @@ nav ul li a:hover {
 }
 
 .iframe-container {
-  width: 100%;
+  width: 100vw;
+  overflow: hidden;
 }
 
 .holder {
